[package]
name = "huffman_rs"
version = "0.1.0"
authors = ["thomas"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.0"
bitvec = "0.21.0"
readonly = "0.2.0"
byteorder = "1.4.2"
clap = {version = "2.33.3", features = ["yaml"]}
