[package]
name = "huff_rs"
version = "0.2.1"
authors = ["Thomas Lindae <thomas.lindae@in.tum.de>"]
edition = "2024"
description = "Encode and decode files with Huffman coding."
license = "MIT"
repository = "https://github.com/Treeniks/huff_rs"
keywords = ["huffman", "huffman_coding", "compression", "decompression"]

[dependencies]
ahash = "0.8.12"
bitvec = "1.0.1"
readonly = "0.2.0"
byteorder = "1.4.2"
clap = { version = "4.5.51", features = ["derive"] }
throbber = "1.0"
